--- a/LaconicLuna-main/templates/navbar.html
+++ b/LaconicLuna-main/templates/navbar.html
@@ -15,6 +15,8 @@
                 </li>
                 <li><a href="about.html">About</a>
                 </li>
+                li><a href="art.html">Art</a>
+                </li>
                 <li><a href="math.html">Math</a>
                 </li>
             </ul>
