--- a/LaconicLuna-main/templates/navbar.html
+++ b/LaconicLuna-main/templates/navbar.html
@@ -15,7 +15,7 @@
                 </li>
                 <li><a href="about.html">About</a>
                 </li>
-                li><a href="art.html">Art</a>
+                <li><a href="art.html">Art</a>
                 </li>
                 <li><a href="math.html">Math</a>
                 </li>
