--- a/LaconicLuna-main/templates/footer.html
+++ b/LaconicLuna-main/templates/footer.html
@@ -18,6 +18,6 @@
                 </p>
             </div>
         </div>
-        <p>Updated 11/19/2024 01:18</p>
+        <p>Updated 5/04/2025 22:22 MDT</p>
     </div>
 </div>
